--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@fastify/static": "^8.2.0",
     "fastify": "^5.4.0",
-    "jspdf": "^3.0.1"
+    "puppeteer": "^24.15.0"
   },
   "devDependencies": {
     "sass": "^1.89.2",
