--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@fastify/static": "^8.2.0",
     "fastify": "^5.4.0",
+    "fastify-cookie": "^5.6.1",
     "puppeteer": "^24.15.0"
   },
   "devDependencies": {
